# chpl-etl-overdrive-checkouts

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  app.py  chimpy-tenant.toml  docker-compose.yml  env.sample  overdrive_client.py  pyproject.toml  requirements.txt  run-overdrive-etl.sh
quadlet/ray-desktop/: chpl-etl-overdrive-checkouts.container
scripts/: capture-fixture.sh
systemd/ray-desktop/: chpl-etl-overdrive-checkouts.timer
tests/: conftest.py  test_app.py  test_chimpy_tenant_manifest.py  test_overdrive_client.py  test_quality_wiring.py
